--- a/Texty/Info.plist
+++ b/Texty/Info.plist
@@ -21,5 +21,42 @@
 			</array>
 		</dict>
 	</dict>
+    
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb494233898697536</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>494233898697536</string>
+    <key>FacebookClientToken</key>
+    <string>1f351c568a375e8a1dfed88119ce8308</string>
+    <key>FacebookDisplayName</key>
+    <string>Texty</string>
+    
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fbapi20130214</string>
+      <string>fbapi20130410</string>
+      <string>fbapi20130702</string>
+      <string>fbapi20131010</string>
+      <string>fbapi20131219</string>
+      <string>fbapi20140410</string>
+      <string>fbapi20140116</string>
+      <string>fbapi20150313</string>
+      <string>fbapi20150629</string>
+      <string>fbapi20160328</string>
+      <string>fbauth</string>
+      <string>fb-messenger-share-api</string>
+      <string>fbauth2</string>
+      <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
